--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -176,7 +176,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   width: 350px;
-  max-width: 90%;
+  max-width: 84%;
   color: #333;
 }
 
@@ -335,6 +335,8 @@ select{
     outline: none;
     font-size: 16px;
     transition: 0.3s;
+        margin-right: 15px;
+
 }
 
 .report{
@@ -351,6 +353,7 @@ select{
     outline: none;
     font-size: 16px;
     transition: 0.3s;
+        margin-right: 20px;
 }
 .report-container label{
   font-size: 22px;
@@ -363,6 +366,7 @@ select{
     outline: none;
     font-size: 16px;
     transition: 0.3s;
+    margin-right: 15px;
 }
 .report-container button{
 
@@ -380,8 +384,8 @@ select{
 
   .workers-form {
   display: flex;
-  flex-wrap: wrap; /* allows it to wrap on very small screens */
-  gap: 10px; /* space between inputs */
+  flex-wrap: wrap; 
+  gap: 10px; 
   align-items: center;
   margin-bottom: 20px;
 }
@@ -407,3 +411,507 @@ select{
 .workers-form button:hover {
   background-color: #2980b9;
 }
+
+.dashboard {
+  font-family: "Poppins", sans-serif;
+  background-color: #f4f6f9;
+  min-height: 100vh;
+  color: #333;
+      padding-bottom: 2px;
+}
+
+.dashboard-header {
+  background-color: #1e293b;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.dashboard-header h1 {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-weight: 500;
+}
+
+.role {
+  color: #b0b8ff;
+}
+
+
+.dashboard-hero {
+  position: relative;
+  margin: 20px auto;
+  max-width: 95%;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
+}
+
+.dashboard-image {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  filter: brightness(50%); 
+  transition: transform 0.6s ease, filter 0.3s ease;
+}
+
+.dashboard-image:hover {
+  transform: scale(1.05);
+  filter: brightness(60%);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.overlay h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+.overlay p {
+  font-size: 1.1rem;
+}
+
+
+.stats-section {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin: 40px auto;
+  flex-wrap: wrap;
+}
+
+.stat-card {
+  background: white;
+  border-radius: 12px;
+  box-shadow: 0 5px 12px rgba(0, 0, 0, 0.1);
+  padding: 25px 40px;
+  text-align: center;
+  width: 250px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.stat-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.stat-card h3 {
+  font-size: 1.2rem;
+  color: #555;
+}
+
+.stat-card p {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.stat-card.blue {
+  border-top: 5px solid #3b82f6;
+}
+.stat-card.green {
+  border-top: 5px solid #22c55e;
+}
+.stat-card.red {
+  border-top: 5px solid #ef4444;
+}
+
+
+.table-section {
+  margin: 40px auto;
+  width: 90%;
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 5px 18px rgba(0, 0, 0, 0.1);
+}
+
+.table-section h2 {
+  margin-bottom: 15px;
+  color: #1e293b;
+}
+
+.table-section table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table-section thead {
+  background-color: #1e293b;
+  color: white;
+}
+
+.table-section th,
+td {
+  padding: 12px 15px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+.table-section tr:hover {
+  background-color: #f3f4f6;
+  transition: background-color 0.2s;
+}
+
+.performance {
+  padding: 5px 10px;
+  border-radius: 8px;
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.performance.excellent {
+  background-color: #d1fae5;
+  color: #065f46;
+}
+
+.performance.average {
+  background-color: #fef9c3;
+  color: #854d0e;
+}
+
+.performance.poor {
+  background-color: #fee2e2;
+  color: #991b1b;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .stats-section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+ 
+
+  .dashboard-header {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .overlay h2 {
+    font-size: 1.5rem;
+  }
+}
+
+/* loginpage */
+
+
+.login-container {
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* backdrop-filter: blur(6px); */
+  position: relative;
+}
+
+.login-container::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 0;
+}
+
+
+.login-box {
+  position: relative;
+  z-index: 1;
+  width: 380px;
+  background: rgba(255, 255, 255, 0.15);
+  /* backdrop-filter: blur(10px); */
+  padding: 40px 30px;
+  border-radius: 16px;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+  text-align: center;
+  color: white;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(255, 255, 255, 0.15)
+    
+}
+
+
+.login-box h1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 25px;
+}
+
+
+.role-selection {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+  font-size: 16px;
+}
+
+.role-selection label {
+  cursor: pointer;
+}
+
+.role-selection input {
+  margin-right: 6px;
+  accent-color: #1e90ff;
+}
+
+
+.login-box input {
+  width: 92%;
+  padding: 12px 14px;
+  margin: 10px 0;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  /* background: rgba(255, 255, 255, 0.2); */
+  color: white;
+  font-size: 15px;
+}
+
+.login-box input::placeholder {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+
+.login-box button {
+  width: 100%;
+  padding: 12px;
+  background-color: #1e90ff;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s ease;
+  margin-top: 10px;
+}
+
+.login-box button:hover {
+  background-color: #0077e6;
+  transform: scale(1.03);
+}
+
+.login-box,
+.login-box input,
+.login-box button {
+  transition: all 0.3s ease;
+}
+
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #2c3e50;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 18px;
+  z-index: 1000;
+  box-sizing: border-box;
+}
+
+.navbar-logo {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  text-decoration: none;
+  color: inherit;
+}
+
+.navbar-logo img {
+  width: 44px;
+  height: 44px;
+  object-fit: contain;
+  border-radius: 6px;
+}
+
+.navbar-logo span {
+  color: #f39c12;
+  font-weight: 700;
+  font-size: 22px;
+}
+
+.navbar-links {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+  padding: 6px 8px;
+  transition: color 0.2s;
+}
+
+.nav-link:hover {
+  color: #f39c12;
+}
+
+.logout-btn {
+  background: #e74c3c;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.logout-btn:hover {
+  background: #c0392b;
+}
+
+.menu-toggle {
+  display: none;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 28px;
+  cursor: pointer;
+}
+
+/* --- Responsive Styles --- */
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+  }
+.navbar {
+  padding: 20px 18px;
+}
+  .navbar-links {
+    position: absolute;
+    top: 93px;
+    left: 0;
+    background: #34495e;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    padding: 20px 0;
+    display: none;
+  }
+
+  .navbar-links.active {
+    display: flex;
+  }
+
+  .nav-link,
+  .logout-btn {
+    width: 80%;
+    text-align: center;
+  }
+
+  .navbar-logo span {
+    font-size: 18px;
+  }
+   .stat-card {
+    width: 65%;
+  }
+  .table-section h2{
+    font-size: 20px;
+  }
+   .table-section table {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+
+
+
+  .table-section tr {
+    margin-bottom: 15px;
+    background: white;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 10px;
+  }
+
+  .table-section td {
+    padding: 8px 10px;
+    position: relative;
+    justify-content: space-between;
+  }
+
+  .table-section td::before {
+    content: attr(data-label);
+    font-weight: 600;
+    color: #2c3e50;
+  }
+  .dashboard-container, 
+  .workers-container, 
+  .attendance-container, 
+  .profile-container,
+   .report-container {
+    padding: 82px 15px;
+}
+table{
+display: block;
+overflow-x: auto;
+  }
+  .attendance-container h2{
+    font-size: 25px;
+  }
+  .attendance-container input {
+    margin-right: 50px;
+  }
+.report-container h2{
+      font-size: 33px;
+}
+.report-container input {
+    margin-right: 59px;
+}
+select{
+      margin-right: 59px;
+
+}
+.profile-container {
+    min-height: 50vh;
+}
+.profile-card {
+    padding: 18px;
+    width: 285px;
+}
+.profile-container h2 {
+    font-size: 35px;
+}
+.login-box {
+    width: 325px;
+    padding: 28px 18px;
+}
+.login-box h1{
+  font-size: 22px;
+}
+}
+
+
+
