--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -934,3 +934,81 @@ select{
 
 
 
+
+/* task */
+
+.task-box input, .task-box textarea {
+    margin-right: 20px;
+}
+.task-box {
+ 
+  padding: 15px;
+  border-radius: 6px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+.task-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.task-table th {
+  background: #113f67;
+  color: white;
+  padding: 10px;
+  text-align: left;
+}
+.task-box textarea {
+  height: 38px;
+  border-radius:8px;
+  border: 1px solid var(--border);
+  outline: none;
+  font-size: 15px;
+  color: var(--text);
+  margin-bottom: 12px;
+  box-sizing: border-box;
+  vertical-align: middle; 
+  color: black;
+}
+
+
+.task-table td {
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+
+.status-chip {
+  padding: 4px 8px;
+  background: #ffe58f;
+  border-radius: 4px;
+  font-size: 12px;
+}
+
+.btn-view {
+  background: #28a745;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  margin-right: 5px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn-delete {
+  background: #dc3545;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn-view:hover,
+.btn-delete:hover {
+  opacity: 0.8;
+}
+
+
+
+
