--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,7 +56,7 @@ footer {
 .workers-container, 
 .attendance-container, 
 .profile-container,
-.report-container {
+.report-container, .task-container, .task-page {
    padding: 82px 40px;
 
 
