--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -57,7 +57,7 @@ footer {
 .attendance-container, 
 .profile-container,
 .report-container, .task-container, .task-page,
-.vendor-container{
+.vendor-container, .page{
    padding: 82px 40px;
 
 
